--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,11 +8,11 @@
   box-sizing: border-box;
 }
 html {
-  font-size: 62.5%;
+  // font-size: 62.5%;
 }
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.6rem;
+  // font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizespeed;
 }
